Fix mobile: larger phones, background phones visible above main, proper sizes

--- a/styles.css
+++ b/styles.css
@@ -557,63 +557,63 @@ body::before {
     }
     
     .phones-showcase {
-        height: 400px;
+        height: 450px;
         justify-content: center;
         padding: 0 10px;
     }
     
     .phone-large {
-        width: 140px;
-        height: 280px;
+        width: 180px;
+        height: 360px;
     }
     
     .phone-small {
-        width: 80px;
-        height: 160px;
+        width: 110px;
+        height: 220px;
     }
     
     .phone-central {
-        margin-left: -70px;
-        margin-top: -140px;
-        z-index: 5;
+        margin-left: -90px;
+        margin-top: -180px;
+        z-index: 4;
     }
     
-    /* Visa små telefoner på mobil - kompakt layout */
+    /* Visa små telefoner på mobil - större och synliga */
     .phone-top-right {
         display: block;
-        z-index: 2;
-        left: 45%;
-        top: 5%;
-        transform: perspective(600px) rotateY(-10deg) rotateX(-6deg) rotateZ(6deg) scale(0.6);
+        z-index: 6;
+        left: 55%;
+        top: 3%;
+        transform: perspective(800px) rotateY(-12deg) rotateX(-8deg) rotateZ(8deg);
     }
     
     .phone-bottom-right {
         display: block;
-        z-index: 3;
-        left: 50%;
-        top: 75%;
-        transform: perspective(600px) rotateY(-12deg) rotateX(8deg) rotateZ(-8deg) scale(0.6);
+        z-index: 6;
+        left: 60%;
+        top: 72%;
+        transform: perspective(800px) rotateY(-15deg) rotateX(10deg) rotateZ(-10deg);
     }
     
     .phone-top-right-2 {
         display: block;
-        z-index: 2;
-        left: 20%;
-        top: 5%;
-        transform: perspective(600px) rotateY(10deg) rotateX(-6deg) rotateZ(-6deg) scale(0.6);
+        z-index: 6;
+        left: 15%;
+        top: 3%;
+        transform: perspective(800px) rotateY(12deg) rotateX(-8deg) rotateZ(-8deg);
     }
     
     .phone-bottom-right-2 {
         display: block;
-        z-index: 3;
-        left: 15%;
-        top: 75%;
-        transform: perspective(600px) rotateY(12deg) rotateX(8deg) rotateZ(8deg) scale(0.6);
+        z-index: 6;
+        left: 10%;
+        top: 72%;
+        transform: perspective(800px) rotateY(15deg) rotateX(10deg) rotateZ(10deg);
     }
     
     .phone-bottom-right-2 .phone {
-        width: 80px;
-        height: 160px;
+        width: 110px;
+        height: 220px;
     }
     
     .signup-form {
@@ -667,54 +667,62 @@ body::before {
     }
     
     .phones-showcase {
-        height: 350px;
+        height: 400px;
         padding: 0 5px;
     }
     
     .phone-large {
-        width: 120px;
-        height: 240px;
+        width: 160px;
+        height: 320px;
     }
     
     .phone-small {
-        width: 70px;
-        height: 140px;
+        width: 100px;
+        height: 200px;
     }
     
     .phone-central {
-        margin-left: -60px;
-        margin-top: -120px;
-        z-index: 5;
+        margin-left: -80px;
+        margin-top: -160px;
+        z-index: 4;
     }
     
-    /* Visa små telefoner även på små skärmar */
+    /* Visa små telefoner även på små skärmar - större */
     .phone-top-right {
-        left: 48%;
-        top: 3%;
-        transform: perspective(500px) rotateY(-8deg) rotateX(-5deg) rotateZ(5deg) scale(0.55);
+        display: block;
+        z-index: 6;
+        left: 58%;
+        top: 2%;
+        transform: perspective(800px) rotateY(-12deg) rotateX(-8deg) rotateZ(8deg);
     }
     
     .phone-bottom-right {
-        left: 52%;
-        top: 78%;
-        transform: perspective(500px) rotateY(-10deg) rotateX(6deg) rotateZ(-6deg) scale(0.55);
+        display: block;
+        z-index: 6;
+        left: 62%;
+        top: 73%;
+        transform: perspective(800px) rotateY(-15deg) rotateX(10deg) rotateZ(-10deg);
     }
     
     .phone-top-right-2 {
-        left: 18%;
-        top: 3%;
-        transform: perspective(500px) rotateY(8deg) rotateX(-5deg) rotateZ(-5deg) scale(0.55);
+        display: block;
+        z-index: 6;
+        left: 12%;
+        top: 2%;
+        transform: perspective(800px) rotateY(12deg) rotateX(-8deg) rotateZ(-8deg);
     }
     
     .phone-bottom-right-2 {
-        left: 12%;
-        top: 78%;
-        transform: perspective(500px) rotateY(10deg) rotateX(6deg) rotateZ(6deg) scale(0.55);
+        display: block;
+        z-index: 6;
+        left: 8%;
+        top: 73%;
+        transform: perspective(800px) rotateY(15deg) rotateX(10deg) rotateZ(10deg);
     }
     
     .phone-bottom-right-2 .phone {
-        width: 70px;
-        height: 140px;
+        width: 100px;
+        height: 200px;
     }
     
     .signup-form {
